Updated full project files

--- a/about.html
+++ b/about.html
@@ -484,16 +484,15 @@
       </div>
     </div>
   </section> -->
-  <div class="overflow-hidden bg-white">
+<section>
+    <div class="overflow-hidden bg-white">
     <div class="shape-mockup spin" data-top="5%" data-right="0%"><img src="assets/img/shape/lines_1.png" alt="shape">
     </div>
     <div class="container">
       <div class="row">
         <div class="col-xl-5">
           <div class="img-box2">
-            <div class="img1"><img src="assets/img/normal/why_1.jpg" alt="Why"></div><a
-              href="https://www.youtube.com/watch?v=_sI_Ps7JSEk" class="play-btn popup-video"><i
-                class="fas fa-play"></i></a>
+            <div class="img1"><img src="assets/img/logo/choose.jpg" alt="Why"></div>
           </div>
         </div>
         <div class="col-xl-7 text-center text-xl-start align-self-center space-extra">
@@ -528,7 +527,9 @@
       </div>
     </div>
   </div>
-  <div class="bg-title space-extra" data-bg-src="assets/img/bg/brand_bg_1.png">
+</section>
+  
+  <!-- <div class="bg-title space-extra" data-bg-src="assets/img/bg/brand_bg_1.png">
     <div class="container">
       <h2 class="sec-title text-white text-center mb-35">our trusted Clients</h2>
       <div class="swiper th-slider" id="brandSlider2"
@@ -573,7 +574,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- <div class="gallery-sec3 space">
     <div class="swiper th-slider" id="gallerySlider1"
       data-slider-options='{"breakpoints":{"0":{"slidesPerView":2},"576":{"slidesPerView":"2"},"768":{"slidesPerView":"3"},"992":{"slidesPerView":"4"},"1200":{"slidesPerView":"4"},"1300":{"slidesPerView":"5"},"1500":{"slidesPerView":"6"}}}'>
