--- a/contact.html
+++ b/contact.html
@@ -383,12 +383,12 @@
     <div class="row g-4 justify-content-center">
       <!-- Address -->
       <div class="col-md-6 col-lg-4">
-        <div class="info-card text-center p-4 bg-gradient-primary text-white rounded-4 shadow-lg h-100 d-flex flex-column justify-content-center">
+        <div class="info-card text-center p-4 bg-gradient-success text-white rounded-4 shadow-lg h-100 d-flex flex-column justify-content-center">
           <div class="icon mb-3">
             <i class="fas fa-location-dot fa-2x"></i>
           </div>
-          <h5 class="fw-bold">Visit Our Office</h5>
-          <p class="mb-0 small opacity-90">
+          <h5 class="fw-bold" style="color: white;">Visit Our Office</h5>
+          <p class="mb-0 small opacity-90 text-white">
             19 Stoney Lake Bay<br>
             Winnipeg, MB R2W 1K7<br>
             Canada
@@ -402,7 +402,7 @@
           <div class="icon mb-3">
             <i class="fas fa-phone-volume fa-2x"></i>
           </div>
-          <h5 class="fw-bold">Call Us Now</h5>
+          <h5 class="fw-bold" style="color: white;">Call Us Now</h5>
           <p class="mb-0">
             <a href="tel:+(204)951-1317" class="text-white text-decoration-none">+(204) 951-1317</a>
           </p>
@@ -412,11 +412,11 @@
 
       <!-- Email -->
       <div class="col-md-6 col-lg-4">
-        <div class="info-card text-center p-4 bg-gradient-warning text-white rounded-4 shadow-lg h-100 d-flex flex-column justify-content-center">
+        <div class="info-card text-center p-4 bg-gradient-success text-white rounded-4 shadow-lg h-100 d-flex flex-column justify-content-center">
           <div class="icon mb-3">
             <i class="fas fa-envelope fa-2x"></i>
           </div>
-          <h5 class="fw-bold">Email Us</h5>
+          <h5 class="fw-bold" style="color: white;">Email Us</h5>
           <p class="mb-0">
             <a href="mailto:support24@rakar.com" class="text-white text-decoration-none">support24@rakar.com</a>
           </p>
