--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         </div>
 
         <!-- Slide 2 -->
-        <div class="swiper-slide">
+        <!-- <div class="swiper-slide">
           <div class="hero-inner">
             <div class="container">
               <div class="hero-style1">
@@ -289,10 +289,10 @@
               <img src="assets/img/hero/hero_1_2.png" alt="HVAC Service">
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- Slide 3 -->
-        <div class="swiper-slide">
+        <!-- <div class="swiper-slide">
           <div class="hero-inner">
             <div class="container">
               <div class="hero-style1">
@@ -320,26 +320,26 @@
               <img src="assets/img/hero/hero_1_3.png" alt="Perfect Air Solution">
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </div>
 
-    <button data-slider-prev="#heroSlide1" class="slider-arrow slider-prev">
+    <!-- <button data-slider-prev="#heroSlide1" class="slider-arrow slider-prev">
       <i class="far fa-arrow-left"></i>
     </button>
     <button data-slider-next="#heroSlide1" class="slider-arrow slider-next">
       <i class="far fa-arrow-right"></i>
-    </button>
+    </button> -->
   </div>
 
   <div class="brand-sec1">
     <div class="top-shape"><img src="assets/img/shape/triangle_shape_1.svg" alt="shape"></div>
     <div class="brand-list-area">
       <div class="brand-list-wrap">
-        <div class="brand-list"><img src="assets/img/brand/brand_1_1.svg" alt="Brand Logo"></div>
+        <!-- <div class="brand-list"><img src="assets/img/brand/brand_1_1.svg" alt="Brand Logo"></div>
         <div class="brand-list"><img src="assets/img/brand/brand_1_2.svg" alt="Brand Logo"></div>
-        <div class="brand-list"><img src="assets/img/brand/brand_1_3.svg" alt="Brand Logo"></div>
+        <div class="brand-list"><img src="assets/img/brand/brand_1_3.svg" alt="Brand Logo"></div> -->
       </div>
       <div class="arrow-down">
         <div class="shape"><img src="assets/img/shape/scroll_text2.svg" alt="shape"></div><a class="link"
@@ -353,9 +353,9 @@
             </svg></span></a>
       </div>
       <div class="brand-list-wrap">
-        <div class="brand-list"><img src="assets/img/brand/brand_1_4.svg" alt="Brand Logo"></div>
+        <!-- <div class="brand-list"><img src="assets/img/brand/brand_1_4.svg" alt="Brand Logo"></div>
         <div class="brand-list"><img src="assets/img/brand/brand_1_5.svg" alt="Brand Logo"></div>
-        <div class="brand-list"><img src="assets/img/brand/brand_1_6.svg" alt="Brand Logo"></div>
+        <div class="brand-list"><img src="assets/img/brand/brand_1_6.svg" alt="Brand Logo"></div> -->
       </div>
     </div>
   </div>
@@ -464,55 +464,6 @@
                     class="far fa-arrow-right ms-2"></i></a>
               </div>
             </div>
-
-            <!-- 06 Humidification -->
-            <div class="swiper-slide">
-              <div class="service-card">
-                <div class="box-number">06</div>
-                <div class="box-icon"><img src="assets/img/icon/service_card_6.svg" alt="Icon"></div>
-                <p class="box-subtitle">Service And Repairs</p>
-                <h3 class="box-title"><a href="service.html#humidification">Humidification</a></h3>
-                <p class="box-text">
-                  Dry indoor air can cause discomfort and allergies. Our humidification systems maintain ideal humidity
-                  levels, improving breathing comfort, protecting furniture, and enhancing indoor wellness.
-                </p>
-                <a href="service.html#humidification" class="th-btn btn-sm">Read More<i
-                    class="far fa-arrow-right ms-2"></i></a>
-              </div>
-            </div>
-
-            <!-- 07 Home Appliance -->
-            <div class="swiper-slide">
-              <div class="service-card">
-                <div class="box-number">07</div>
-                <div class="box-icon"><img src="assets/img/icon/service_card_7.svg" alt="Icon"></div>
-                <p class="box-subtitle">Service And Repairs</p>
-                <h3 class="box-title"><a href="service.html#home-appliance">Home Appliance</a></h3>
-                <p class="box-text">
-                  We repair and maintain all major home appliances with precision and care. Our trained experts ensure
-                  your daily essentials work perfectly and perform efficiently every time you need them.
-                </p>
-                <a href="service.html#home-appliance" class="th-btn btn-sm">Read More<i
-                    class="far fa-arrow-right ms-2"></i></a>
-              </div>
-            </div>
-
-            <!-- 08 AC Installation -->
-            <div class="swiper-slide">
-              <div class="service-card">
-                <div class="box-number">08</div>
-                <div class="box-icon"><img src="assets/img/icon/service_card_8.svg" alt="Icon"></div>
-                <p class="box-subtitle">Service And Repairs</p>
-                <h3 class="box-title"><a href="service.html#ac-installation">AC Installation</a></h3>
-                <p class="box-text">
-                  From system setup to replacement, our skilled team handles all AC installations with precision,
-                  ensuring lasting performance, energy efficiency, and dependable comfort in every season.
-                </p>
-                <a href="service.html#ac-installation" class="th-btn btn-sm">Read More<i
-                    class="far fa-arrow-right ms-2"></i></a>
-              </div>
-            </div>
-
           </div>
           <div class="slider-pagination"></div>
         </div>
@@ -649,9 +600,10 @@
       <div class="row">
         <div class="col-xl-5">
           <div class="img-box2">
-            <div class="img1"><img src="assets/img/normal/why_1.jpg" alt="Why"></div><a
+            <div class="img1"><img src="assets/img/logo/why2.png" alt="Why"></div>
+            <!-- <a
               href="https://www.youtube.com/watch?v=_sI_Ps7JSEk" class="play-btn popup-video"><i
-                class="fas fa-play"></i></a>
+                class="fas fa-play"></i></a> -->
           </div>
         </div>
         <div class="col-xl-7 text-center text-xl-start align-self-center space-extra">
@@ -689,7 +641,7 @@
       </div>
     </div>
   </div>
-  <section class="space">
+  <!-- <section class="space">
     <div class="container z-index-common">
       <div class="row justify-content-between align-items-center">
         <div class="col-md">
@@ -814,8 +766,8 @@
         </div>
       </div>
     </div>
-  </section>
-  <div class="space-bottom">
+  </section> -->
+  <div class="space-bottom" style="margin-top: 90px;">
     <div class="container">
       <div class="counter-card-wrap">
         <div class="counter-card">
@@ -1151,7 +1103,7 @@
       </div>
     </div>
   </section>
-  <!-- <section class="space" data-bg-src="assets/img/bg/pattern_bg_2.jpg">
+  <section class="space" data-bg-src="assets/img/bg/pattern_bg_2.jpg">
     <div class="shape-mockup spin" data-top="15%" data-right="6%"><img src="assets/img/shape/dots_1.svg" alt="shape">
     </div>
     <div class="shape-mockup spin" data-bottom="6%" data-left="4%"><img src="assets/img/shape/dots_1.svg" alt="shape">
@@ -1243,7 +1195,7 @@
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
   <!-- <section class="space" id="blog-sec">
     <div class="container">
       <div class="row justify-content-between align-items-center">
