--- a/financing.html
+++ b/financing.html
@@ -39,7 +39,7 @@
 </head>
 <style>
   .financing-hero {
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.315)), url('assets/img/logo/banner.jpg') center/cover no-repeat;
+   background-image: linear-gradient(to top, #101840 0%, #081e67 100%);
     color: white;
     padding: 120px 0 80px;
     text-align: center;
@@ -344,8 +344,8 @@
   <!-- ==================== FINANCING HERO SECTION ==================== -->
   <section class="financing-hero" style="margin-top: 180px;">
     <div class="container">
-      <h1>Affordable Financing for Your Comfort</h1>
-      <p>Get the HVAC system you need today with flexible, low-interest financing options. No upfront costs. Easy
+      <h1 style="color: #f8f9fa;">Affordable Financing for Your Comfort</h1>
+      <p style="color: #f8f9fad7;">Get the HVAC system you need today with flexible, low-interest financing options. No upfront costs. Easy
         monthly payments.</p>
       <a href="#apply" class="th-btn style3">Apply for Financing Now <i class="fas fa-arrow-right ms-2"></i></a>
     </div>
@@ -394,137 +394,99 @@
   </section>
 
   <!-- ==================== FINANCING OPTIONS ==================== -->
-  <section class="finance-options">
+  <section class="space" data-bg-src="assets/img/bg/pattern_bg_2.jpg">
+    <div class="shape-mockup spin" data-top="15%" data-right="6%"><img src="assets/img/shape/dots_1.svg" alt="shape">
+    </div>
+    <div class="shape-mockup spin" data-bottom="6%" data-left="4%"><img src="assets/img/shape/dots_1.svg" alt="shape">
+    </div>
     <div class="container">
-      <div class="row justify-content-center text-center mb-5">
-        <div class="col-lg-8">
-          <h2 class="sec-title">Flexible Plans for Every Budget</h2>
-          <p class="sec-text">Choose the plan that fits your needs. All include full installation.</p>
-        </div>
-      </div>
-      <div class="row gy-4 justify-content-center">
-        <!-- Plan 1 -->
-        <div class="col-md-6 col-lg-4">
-          <div class="option-card">
-            <div class="option-header">
-              <h3>Standard Plan</h3>
-            </div>
-            <div class="option-body">
-              <div class="price">$99<span style="font-size:1rem;">/mo</span></div>
-              <ul class="list-unstyled" style="margin-bottom:1.5rem;">
-                <li><i class="fas fa-check text-success me-2"></i> Up to $7,500</li>
-                <li><i class="fas fa-check text-success me-2"></i> 36 Months</li>
-                <li><i class="fas fa-check text-success me-2"></i> 6.99% APR</li>
-                <li><i class="fas fa-check text-success me-2"></i> No Down Payment</li>
-              </ul>
-              <a href="#apply" class="th-btn w-100">Apply Now</a>
-            </div>
-          </div>
-        </div>
-        <!-- Plan 2 - Popular -->
-        <div class="col-md-6 col-lg-4">
-          <div class="option-card position-relative" style="border: 2px solid var(--theme-color);">
-            <span class="position-absolute start-50 translate-middle badge rounded-pill bg-warning text-dark px-3"
-              style="z-index:2; font-size:0.9rem; margin-top: 6px;">MOST POPULAR</span>
-            <div class="option-header">
-              <h3>Comfort Plan</h3>
-            </div>
-            <div class="option-body">
-              <div class="price">$149<span style="font-size:1rem;">/mo</span></div>
-              <ul class="list-unstyled" style="margin-bottom:1.5rem;">
-                <li><i class="fas fa-check text-success me-2"></i> Up to $15,000</li>
-                <li><i class="fas fa-check text-success me-2"></i> 60 Months</li>
-                <li><i class="fas fa-check text-success me-2"></i> 0% APR for 18 Mo*</li>
-                <li><i class="fas fa-check text-success me-2"></i> Free Maintenance Year 1</li>
-              </ul>
-              <a href="#apply" class="th-btn style3 w-100">Apply Now</a>
-            </div>
-          </div>
-        </div>
-        <!-- Plan 3 -->
-        <div class="col-md-6 col-lg-4">
-          <div class="option-card">
-            <div class="option-header">
-              <h3>Premium Plan</h3>
-            </div>
-            <div class="option-body">
-              <div class="price">$199<span style="font-size:1rem;">/mo</span></div>
-              <ul class="list-unstyled" style="margin-bottom:1.5rem;">
-                <li><i class="fas fa-check text-success me-2"></i> Up to $25,000</li>
-                <li><i class="fas fa-check text-success me-2"></i> 84 Months</li>
-                <li><i class="fas fa-check text-success me-2"></i> 4.99% APR</li>
-                <li><i class="fas fa-check text-success me-2"></i> 2-Year Warranty Included</li>
-              </ul>
-              <a href="#apply" class="th-btn w-100">Apply Now</a>
-            </div>
+      <div class="row justify-content-center">
+        <div class="col-xl-8">
+          <div class="title-area text-center"><span class="sub-title shape-white"><img
+                src="assets/img/theme-img/title_icon_white.svg" alt="Icon">Pricing Plan</span>
+            <h2 class="sec-title" style="color: #101840;">Our Best Pricing Plan</h2>
+            <p class="sec-text" style="color: #101840;">The popular belief, Lorem Ipsum is not simply random text. It has roots in a
+              piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
           </div>
         </div>
       </div>
-      <div class="text-center mt-4">
-        <p class="text-muted"><small>*Subject to credit approval. Terms apply.</small></p>
+      <div class="row gy-4">
+        <div class="hover-item col-xl-3 col-md-6">
+          <div class="price-card">
+            <div class="box-shape"><img src="assets/img/shape/lines_3.png" alt="shape"></div>
+            <h3 class="box-title">Basic Plan</h3>
+            <p class="box-price">$99.00<span class="duration">/Monthly</span></p>
+            <div class="box-list">
+              <ul>
+                <li>Monthly Inspection</li>
+                <li>General Repair</li>
+                <li class="unavailable">Maintenance</li>
+                <li class="unavailable">Fixing of Faulty Wiring</li>
+                <li class="unavailable">Ac Condition Repair</li>
+              </ul>
+            </div>
+            <div class="box-footer"><a href="pricing.html" class="th-btn">Get Started<i
+                  class="far fa-arrow-right ms-2"></i></a></div>
+          </div>
+        </div>
+        <div class="hover-item item-active col-xl-3 col-md-6">
+          <div class="price-card">
+            <div class="box-shape"><img src="assets/img/shape/lines_3.png" alt="shape"></div><span class="tag">Popular
+              Plan</span>
+            <h3 class="box-title">Standard</h3>
+            <p class="box-price">$129.00<span class="duration">/Monthly</span></p>
+            <div class="box-list">
+              <ul>
+                <li>Monthly Inspection</li>
+                <li>General Repair</li>
+                <li>Maintenance</li>
+                <li class="unavailable">Fixing of Faulty Wiring</li>
+                <li class="unavailable">Ac Condition Repair</li>
+              </ul>
+            </div>
+            <div class="box-footer"><a href="pricing.html" class="th-btn">Get Started<i
+                  class="far fa-arrow-right ms-2"></i></a></div>
+          </div>
+        </div>
+        <div class="hover-item col-xl-3 col-md-6">
+          <div class="price-card">
+            <div class="box-shape"><img src="assets/img/shape/lines_3.png" alt="shape"></div>
+            <h3 class="box-title">Premium</h3>
+            <p class="box-price">$199.00<span class="duration">/Monthly</span></p>
+            <div class="box-list">
+              <ul>
+                <li>Monthly Inspection</li>
+                <li>General Repair</li>
+                <li>Maintenance</li>
+                <li>Fixing of Faulty Wiring</li>
+                <li class="unavailable">Ac Condition Repair</li>
+              </ul>
+            </div>
+            <div class="box-footer"><a href="pricing.html" class="th-btn">Get Started<i
+                  class="far fa-arrow-right ms-2"></i></a></div>
+          </div>
+        </div>
+        <div class="hover-item col-xl-3 col-md-6">
+          <div class="price-card">
+            <div class="box-shape"><img src="assets/img/shape/lines_3.png" alt="shape"></div>
+            <h3 class="box-title">Dedicated Plan</h3>
+            <p class="box-price">$299.00<span class="duration">/Monthly</span></p>
+            <div class="box-list">
+              <ul>
+                <li>Monthly Inspection</li>
+                <li>General Repair</li>
+                <li>Maintenance</li>
+                <li>Fixing of Faulty Wiring</li>
+                <li>Ac Condition Repair</li>
+              </ul>
+            </div>
+            <div class="box-footer"><a href="pricing.html" class="th-btn">Get Started<i
+                  class="far fa-arrow-right ms-2"></i></a></div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
-
-  <!-- ==================== CTA SECTION ==================== -->
-  <section class="container" id="apply">
-    <div class="cta-section">
-      <h2>Ready to Get Started?</h2>
-      <p class="fs-18 mb-4">Apply in under 2 minutes. Instant decision in most cases.</p>
-      <a href="contact.html" class="th-btn style3">Start Application <i class="fas fa-arrow-right ms-2"></i></a>
-      <div class="trust-badges mt-5">
-        <img src="assets/img/logo/BBB.png" alt="BBB Accredited">
-        <img src="assets/img/logo/NATE.png" alt="NATE Certified">
-        <img src="assets/img/logo/energy.png" alt="Energy Star">
-      </div>
-    </div>
-  </section>
-  <div class="video-sec1" data-bg-src="assets/img/normal/video_1.jpg">
-    <div class="container">
-      <div class="video-content1"><a href="https://www.youtube.com/watch?v=_sI_Ps7JSEk"
-          class="play-btn style3 popup-video"><i class="fa-sharp fa-solid fa-play"></i></a>
-        <h2 class="sec-title text-white">Exclusive video about our recent projects</h2>
-      </div>
-    </div>
-    <div class="">
-      <div class="container">
-        <div class="counter-card-wrap style2">
-          <div class="counter-card">
-            <div class="box-icon"><img src="assets/img/icon/counter_card_5.svg" alt="Icon"></div>
-            <div class="media-body">
-              <h2 class="box-number text-white"><span class="counter-number">1250</span>+</h2>
-              <p class="box-text text-white">Completed Projects</p>
-            </div>
-          </div>
-          <div class="divider"></div>
-          <div class="counter-card">
-            <div class="box-icon"><img src="assets/img/icon/counter_card_2.svg" alt="Icon"></div>
-            <div class="media-body">
-              <h2 class="box-number text-white"><span class="counter-number">180</span>+</h2>
-              <p class="box-text text-white">Happy Clients</p>
-            </div>
-          </div>
-          <div class="divider"></div>
-          <div class="counter-card">
-            <div class="box-icon"><img src="assets/img/icon/counter_card_3.svg" alt="Icon"></div>
-            <div class="media-body">
-              <h2 class="box-number text-white"><span class="counter-number">85</span>+</h2>
-              <p class="box-text text-white">Expert Team</p>
-            </div>
-          </div>
-          <div class="divider"></div>
-          <div class="counter-card">
-            <div class="box-icon"><img src="assets/img/icon/counter_card_4.svg" alt="Icon"></div>
-            <div class="media-body">
-              <h2 class="box-number text-white"><span class="counter-number">158</span>+</h2>
-              <p class="box-text text-white">Awards Won</p>
-            </div>
-          </div>
-          <div class="divider"></div>
-        </div>
-      </div>
-    </div>
-  </div>
 
 
   <!-- ==================== FOOTER ==================== -->
