Updated full project files

--- a/location.html
+++ b/location.html
@@ -157,15 +157,7 @@
 
         <!-- Location -->
        <li class="menu-item-has-children">
-  <a href="#">Location</a>
-  <ul class="sub-menu">
-    <li><a href="location.html">All Service Areas</a></li>
-    <li><a href="amber-trails.html">Amber Trails</a></li>
-    <li><a href="charleswood.html">Charleswood</a></li>
-    <li><a href="st-vital.html">St. Vital</a></li>
-    <!-- Add more -->
-  </ul>
-</li>
+  <a href="location.html">Location</a></li>
       </ul>
     </div>
   </div>
